--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       retries: 3
       start_period: 40s
 
-  # Para desarrollo con hot-reload
+  # Opcional: Para desarrollo con hot-reload
   mock-api-dev:
     build:
       context: .
